--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,6 +13,26 @@
       <%= stylesheet_link_tag "all" %>
     </head>
     <body class="<%= page_classes %>">
+      <nav class="nav-fixed nav-fixed--left">  
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Life 'N' Style</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+
+      <nav class="nav-fixed nav-fixed--right">  
+        <ul>
+          <li><a href="#">Tumblr</a></li>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Youtube</a></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Facebook</a></li>
+        </ul>
+      </nav>
       <%= yield %>
       <%= javascript_include_tag "all" %>
     </body>
