--- a/source/css/all.scss
+++ b/source/css/all.scss
@@ -11,7 +11,7 @@ body {
 	padding-bottom: 100px;
 }
 
-#intro {
+.bg-hero {
 	top: 0;
 	height: 800px;
 	background-image: url('https://download.unsplash.com/photo-1433463002246-9d846c114eb8');
@@ -49,4 +49,9 @@ body {
 
 .nav-fixed--right {
 	right: 50px;
+}
+
+.vertical-center {
+	margin-top: 400px;
+	@include transform(translateY(-50%));
 }
