--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,8 +15,8 @@
     <body class="<%= page_classes %>">
       <nav class="nav-fixed nav-fixed--left">  
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Life 'N' Style</a></li>
           <li><a href="#">Press</a></li>
