--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/about">About</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="/portfolio">Portfolio</a></li>
           <li><a href="#">Life 'N' Style</a></li>
           <li><a href="#">Press</a></li>
           <li><a href="#">Contact</a></li>
