contact page on the t

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -20,7 +20,7 @@
           <li><a href="/portfolio">Portfolio</a></li>
           <li><a href="#">Life 'N' Style</a></li>
           <li><a href="#">Press</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
 
