--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -18,8 +18,8 @@
           <li><a href="/">Home</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/portfolio">Portfolio</a></li>
-          <li><a href="#">Life 'N' Style</a></li>
-          <li><a href="#">Press</a></li>
+          <li><a href="/life-n-style">Life 'N' Style</a></li>
+          <li><a href="/press">Press</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
