--- a/source/css/partials/_config.scss
+++ b/source/css/partials/_config.scss
@@ -4,7 +4,7 @@
 
 // Font Stacks
 
-$font-family--primary    : Helvetica, Arial, sans-serif;
+$font-family--primary    : "Proxima Nova", Arial, sans-serif;
 
 // Font Weights
 
