improvements to instagram grid

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -31,7 +31,7 @@
       <nav class="nav-fixed nav-fixed--right">  
         <ul>
           <li>
-            <a href="#">
+            <a href="http://jordandenzel.tumblr.com/" target="__blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle-thin fa-stack-2x"></i>
                 <i class="fa fa-tumblr fa-stack-1x"></i>
@@ -39,7 +39,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://instagram.com/Jordan_Denzel/" target="__blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle-thin fa-stack-2x"></i>
                 <i class="fa fa-instagram fa-stack-1x"></i>
@@ -47,7 +47,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://www.youtube.com/channel/UCoKSpLg0rQ0OS0jBRHXYAtw" target="__blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle-thin fa-stack-2x"></i>
                 <i class="fa fa-youtube fa-stack-1x"></i>
@@ -55,7 +55,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://twitter.com/jordan_denzel" target="__blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle-thin fa-stack-2x"></i>
                 <i class="fa fa-twitter fa-stack-1x"></i>
@@ -63,7 +63,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" target="__blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle-thin fa-stack-2x"></i>
                 <i class="fa fa-facebook fa-stack-1x"></i>
