--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -1,22 +1,34 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12 grid--item">
-      <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+    <div class="col-md-12 grid--item" style="margin-top:200px;">
+      <figure>
+        <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+        <figcaption>Modern Rocker Part I</figcaption>
+      </figure>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12 grid--item">
-      <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+      <figure>
+        <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+        <figcaption>Modern Rocker Part I</figcaption>
+      </figure>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12 grid--item">
-      <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+      <figure>
+        <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+        <figcaption>Modern Rocker Part I</figcaption>
+      </figure>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12 grid--item">
-      <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+      <figure>
+        <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+        <figcaption>Modern Rocker Part I</figcaption>
+      </figure>
     </div>
   </div>
 </div>
