--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -15,7 +15,7 @@
         <div class="form-group">
           <textarea class="form-control" rows="5" id="comment" placeholder="Message"></textarea>
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default">Send</button>
       </form>
     </div>
   </div>
