--- a/source/css/all.scss
+++ b/source/css/all.scss
@@ -91,3 +91,25 @@ body {
 		padding: 15px;
 	}
 }
+
+.contact .btn {
+	background-color: #000;
+	color: white;
+	border-radius: 0;
+	text-transform: uppercase;
+	padding: 12px 24px;
+	border: 0;
+}
+
+.contact .form-control {
+  color: #000;
+  border: 1px solid #000;
+  text-transform: uppercase;
+  border-radius: 0;
+  -webkit-box-shadow: inset 0 0 0 rgba(0,0,0,0.0);
+  box-shadow: inset 0 0 0 rgba(0,0,0,0.0);
+
+}
+input[placeholder] {
+	color: #000;
+}
