--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -26,7 +26,7 @@
         </ul>
       </nav>
       <nav class="nav-fixed nav-fixed--center">  
-        <a href="/" class="brand"><img src="//cdn.shopify.com/s/files/1/0205/9696/t/6/assets/logo.png?9527067591422849040" alt=""></a>
+        <a href="/" class="brand"><img src="img/logo-dark.png" alt=""></a>
       </nav>
       <nav class="nav-fixed nav-fixed--right">  
         <ul>
