--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <form class="text-center vertical-center">
-        <p class="lead">For all enquires, please fill in the form below:</p>
+        <p class="text-uppercase">For all enquires, please fill in the form below:</p>
         <div class="form-group">
           <input type="text" class="form-control text-center" id="" placeholder="Name">
         </div>
@@ -13,7 +13,7 @@
           <input type="text" class="form-control text-center" id="" placeholder="Subject">
         </div>
         <div class="form-group">
-          <textarea class="form-control" rows="5" id="comment" placeholder="Message"></textarea>
+          <textarea class="form-control" rows="8" id="message" placeholder="Message"></textarea>
         </div>
         <button type="submit" class="btn btn-default">Send</button>
       </form>
