--- a/source/press.html.erb
+++ b/source/press.html.erb
@@ -1,36 +1,42 @@
 <div class="container">
-<div class="press-gallery">
-  <div class="row">
-    <div class="col-md-4 col-md-offset-2">
-      <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+    <div class="row">
+      <div class="col-md-12">
+        <img src="img/press-grid.png" class="img-responsive" alt="">
+      </div>
     </div>
-    <div class="col-md-4">
-      <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+<!--     
+  <div class="press-gallery">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-2">
+        <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+      </div>
+      <div class="col-md-4">
+        <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4 col-md-offset-2">
-      <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-2">
+        <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+      </div>
+      <div class="col-md-4">
+        <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+      </div>
     </div>
-    <div class="col-md-4">
-      <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-2">
+        <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+      </div>
+      <div class="col-md-4">
+        <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4 col-md-offset-2">
-      <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-2">
+        <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+      </div>
+      <div class="col-md-4">
+        <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
+      </div>
     </div>
-    <div class="col-md-4">
-      <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4 col-md-offset-2">
-      <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
-    </div>
-    <div class="col-md-4">
-      <img src="https://download.unsplash.com/photo-1433463002246-9d846c114eb8" class="img-responsive" alt="">
-    </div>
-  </div>
-</div>
+  </div> -->
 </div>
