--- a/source/partials/_instagram-grid.html.erb
+++ b/source/partials/_instagram-grid.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
-    <a href="https://instagram.com/p/4paBdMD8Qz/?taken-by=jordan_denzel" target="__blank">
-      <img class="featurette-image img-responsive center-block" src="https://scontent-lga1-1.cdninstagram.com/hphotos-xfa1/t51.2885-15/11377997_1617444191864394_761035814_n.jpg" alt="nothing new... but it's a lot, it's a lot @j2klive | @crepprotect 🚕💨">    
+    <a href="https://instagram.com/p/4e0KpmD8Rd/?taken-by=jordan_denzel" target="__blank">
+      <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11380841_910231265685587_1639114856_n.jpg" alt="Heat of the moment! Wouldn't mind either of these in my wardrobe if I'm honest | ">    
     </a>
   </div>
 
   <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
-    <a href="https://instagram.com/p/4pUMLrj8VZ/?taken-by=jordan_denzel" target="__blank">
-      <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-f-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/11357628_928637760526749_1241490615_n.jpg" alt="MOOD:">    
+    <a href="https://instagram.com/p/4jUhtlD8Yh/?taken-by=jordan_denzel" target="__blank">
+      <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-b-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/11357634_845780178832057_1245708318_n.jpg" alt="I'm guilty of this sometimes, I can't lie!">    
     </a>
   </div>
 
@@ -38,14 +38,14 @@
 
 <div class="row">
   <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
-    <a href="https://instagram.com/p/4paBdMD8Qz/?taken-by=jordan_denzel" target="__blank">
-      <img class="featurette-image img-responsive center-block" src="https://scontent-lga1-1.cdninstagram.com/hphotos-xfa1/t51.2885-15/11377997_1617444191864394_761035814_n.jpg" alt="nothing new... but it's a lot, it's a lot @j2klive | @crepprotect 🚕💨">    
+    <a href="https://instagram.com/p/4e0KpmD8Rd/?taken-by=jordan_denzel" target="__blank">
+      <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11380841_910231265685587_1639114856_n.jpg" alt="Heat of the moment! Wouldn't mind either of these in my wardrobe if I'm honest | ">    
     </a>
   </div>
 
   <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
-    <a href="https://instagram.com/p/4pUMLrj8VZ/?taken-by=jordan_denzel" target="__blank">
-      <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-f-a.akamaihd.net/hphotos-ak-xaf1/t51.2885-15/11357628_928637760526749_1241490615_n.jpg" alt="MOOD:">    
+    <a href="https://instagram.com/p/4e0KpmD8Rd/?taken-by=jordan_denzel" target="__blank">
+      <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11380841_910231265685587_1639114856_n.jpg" alt="Heat of the moment! Wouldn't mind either of these in my wardrobe if I'm honest | ">    
     </a>
   </div>
 
