--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,7 +1,10 @@
 <section class="bg-hero" data-bottom-top="background-position: 50% 10%" data-top-bottom="background-position: 50% 75%">
   <div class="row">
-    <div class="col-md-6 col-md-offset-3 text-center vertical-center">
-      <p class="text-uppercase">Jordan Denzel is a London based fashion stylist, blogger and influencer. Having graduated studying Fashion &amp; Retail in London, his career begun style assisting for clients such as Rita Ora and Labrinth.<br><br>Since building a love &amp; passion and reputation being a blogger and lifestyle culture, Jordan's career has seen growth from premium to luxury retail, public relations, marketing and social media platforms.<br><br>Jordan enjoys creating and new opportunities and has gone on to collaborate with successful international brands and talents such as; Moschino, Chase &amp; Status, ASOS, Nike, Hunger Magazine & CAT Footwear.<br><br>This self-titled website is an in-sight and combination of Jordan's portfolio, fashion and entertainment, which aspires to inspire.</p>
+    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center vertical-center">
+      <p class="text-uppercase">Jordan Denzel is a London based fashion stylist, blogger and influencer. Having graduated studying Fashion &amp; Retail in London, his career begun style assisting for clients such as Rita Ora and Labrinth.</p>
+      <p class="text-uppercase">Since building a love &amp; passion and reputation being a blogger and lifestyle culture, Jordan's career has seen growth from premium to luxury retail, public relations, marketing and social media platforms.</p>
+      <p class="text-uppercase">Jordan enjoys creating and new opportunities and has gone on to collaborate with successful international brands and talents such as; Moschino, Chase &amp; Status, ASOS, Nike, Hunger Magazine &amp; CAT Footwear.</p>
+      <p class="text-uppercase">This self-titled website is an in-sight and combination of Jordan's portfolio, fashion and entertainment, which aspires to inspire.</p>
     </div>
   </div>  
 </section>
