--- a/source/css/modules/_index.scss
+++ b/source/css/modules/_index.scss
@@ -12,3 +12,8 @@
 // Navigation
 // ==========================================================================
 @import 'navs';
+
+// ==========================================================================
+// Content Curtain
+// ==========================================================================
+@import 'curtain';
