--- a/source/css/layout/_index.scss
+++ b/source/css/layout/_index.scss
@@ -1,5 +1,5 @@
 // ==========================================================================
-// Placeholder Selectors
+// Extends
 // ==========================================================================
 @import 'extends';
 
