organized style and structure for curtain

--- a/source/curtain.html.erb
+++ b/source/curtain.html.erb
@@ -1,27 +1,27 @@
-<section class="cd-fixed-background img-1">
-  <div class="cd-content col-md-6 col-md-offset-3 text-center">
+<section class="curtain-block img-1">
+  <div class="col-md-6 col-md-offset-3 text-center vertical-center">
     <h2>Title here</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolor beatae, laudantium eos fugiat, deserunt delectus quibusdam quae placeat, tempora ea? Nulla ducimus, magnam sunt repellendus modi, ad ipsam est.</p>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolor beatae, laudantium eos fugiat, deserunt delectus quibusdam quae placeat, tempora ea? Nulla ducimus, magnam sunt repellendus modi, ad ipsam est.</p>
   </div>
 </section>
 
-<section class="cd-fixed-background img-2">
-  <div class="cd-content col-md-6 col-md-offset-3 text-center">
+<section class="curtain-block img-2">
+  <div class="col-md-6 col-md-offset-3 text-center vertical-center">
     <h2>Title here</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolor beatae, laudantium eos fugiat, deserunt delectus quibusdam quae placeat, tempora ea? Nulla ducimus, magnam sunt repellendus modi, ad ipsam est.</p>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolor beatae, laudantium eos fugiat, deserunt delectus quibusdam quae placeat, tempora ea? Nulla ducimus, magnam sunt repellendus modi, ad ipsam est.</p>
   </div>
 </section>
 
-<section class="cd-fixed-background img-3">
-  <div class="cd-content col-md-6 col-md-offset-3 text-center">
+<section class="curtain-block img-3">
+  <div class="col-md-6 col-md-offset-3 text-center vertical-center">
     <h2>Title here</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolor beatae, laudantium eos fugiat, deserunt delectus quibusdam quae placeat, tempora ea? Nulla ducimus, magnam sunt repellendus modi, ad ipsam est.</p>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolor beatae, laudantium eos fugiat, deserunt delectus quibusdam quae placeat, tempora ea? Nulla ducimus, magnam sunt repellendus modi, ad ipsam est.</p>
   </div>
 </section>
 
-<section class="cd-fixed-background img-4">
-  <div class="cd-content col-md-6 col-md-offset-3 text-center">
+<section class="curtain-block img-4">
+  <div class="col-md-6 col-md-offset-3 text-center vertical-center">
     <h2>Title here</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolor beatae, laudantium eos fugiat, deserunt delectus quibusdam quae placeat, tempora ea? Nulla ducimus, magnam sunt repellendus modi, ad ipsam est.</p>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolor beatae, laudantium eos fugiat, deserunt delectus quibusdam quae placeat, tempora ea? Nulla ducimus, magnam sunt repellendus modi, ad ipsam est.</p>
   </div>
 </section>
