--- a/source/css/modules/_curtain.scss
+++ b/source/css/modules/_curtain.scss
@@ -6,73 +6,33 @@ body.curtain {
   height: 100%;
 }
 
-.cd-fixed-background {
+.curtain-block {
   position: relative;
   padding: 3em 5% 0;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  // box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.9);
 }
-.cd-fixed-background .light-background h2, .cd-fixed-background .light-background p {
-  color: #0f594d;
-}
-.cd-fixed-background .cd-content::after {
-  /* phone image on small devices */
-  content: '';
-  display: block;
-  width: 100%;
-  padding: 60% 0;
-  margin: 2em auto 0;
-}
-.cd-fixed-background.img-1 {
-  background-color: #bf5138;
-}
-.cd-fixed-background.img-1 .cd-content::after {
-  background: url("../img/img-mobile-1.jpg") no-repeat;
-  background-size: 100% auto;
-}
-.cd-fixed-background.img-2 {
-  background-color: #f2e6cd;
-}
-.cd-fixed-background.img-2 .cd-content::after {
-  background: url("../img/img-mobile-2.jpg") no-repeat;
-  background-size: 100% auto;
-}
-.cd-fixed-background.img-3 {
-  background-color: #0f594d;
-}
-.cd-fixed-background.img-3 .cd-content::after {
-  background: url("../img/img-mobile-3.jpg") no-repeat;
-  background-size: 100% auto;
-}
-.cd-fixed-background.img-4 {
-  background-color: #db9537;
-}
-.cd-fixed-background.img-4 .cd-content::after {
-  background: url("../img/img-mobile-4.jpg") no-repeat;
-  background-size: 100% auto;
-}
-
-.cd-fixed-background {
+.curtain-block {
   height: 100vh;
   padding: 0;
 }
-.cd-fixed-background.img-1 {
+.curtain-block div::after {
+  display: none !important;
+}
+.curtain-block.img-1 {
   background-image: url("https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xfp1/t51.2885-15/11117029_1401450123506967_2131412174_n.jpg");
 }
-.cd-fixed-background.img-2 {
+.curtain-block.img-2 {
   background-image: url("https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xap1/t51.2885-15/11049321_439601382864083_940391779_n.jpg");
 }
-.cd-fixed-background.img-3 {
+.curtain-block.img-3 {
   background-image: url("https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xfp1/t51.2885-15/11137903_1428919347405020_1064450290_n.jpg");
 }
-.cd-fixed-background.img-4 {
+.curtain-block.img-4 {
   background-image: url("https://igcdn-photos-f-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/11176039_1577157229208917_1091004081_n.jpg");
 }
-
-.cd-fixed-background {
+.curtain-block {
   background-attachment: fixed;
 }
-
-
