linked curtain page w/ port

--- a/source/curtain.html.erb
+++ b/source/curtain.html.erb
@@ -1,25 +1,25 @@
-<section class="curtain-block img-1">
+<section id="img-1" class="curtain-block img-1">
   <div class="col-md-6 col-md-offset-3 text-center vertical-center">
     <h2>Title here</h2>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolor beatae, laudantium eos fugiat, deserunt delectus quibusdam quae placeat, tempora ea? Nulla ducimus, magnam sunt repellendus modi, ad ipsam est.</p>
   </div>
 </section>
 
-<section class="curtain-block img-2">
+<section id="img-2" class="curtain-block img-2">
   <div class="col-md-6 col-md-offset-3 text-center vertical-center">
     <h2>Title here</h2>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolor beatae, laudantium eos fugiat, deserunt delectus quibusdam quae placeat, tempora ea? Nulla ducimus, magnam sunt repellendus modi, ad ipsam est.</p>
   </div>
 </section>
 
-<section class="curtain-block img-3">
+<section id="img-3" class="curtain-block img-3">
   <div class="col-md-6 col-md-offset-3 text-center vertical-center">
     <h2>Title here</h2>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolor beatae, laudantium eos fugiat, deserunt delectus quibusdam quae placeat, tempora ea? Nulla ducimus, magnam sunt repellendus modi, ad ipsam est.</p>
   </div>
 </section>
 
-<section class="curtain-block img-4">
+<section id="img-4" class="curtain-block img-4">
   <div class="col-md-6 col-md-offset-3 text-center vertical-center">
     <h2>Title here</h2>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolor beatae, laudantium eos fugiat, deserunt delectus quibusdam quae placeat, tempora ea? Nulla ducimus, magnam sunt repellendus modi, ad ipsam est.</p>
