--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -1,34 +1,42 @@
 <div class="container">
   <div class="row">
     <div class="col-md-10 col-md-offset-1 grid--item" style="margin-top:200px;">
-      <figure>
-        <img src="https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xfp1/t51.2885-15/11117029_1401450123506967_2131412174_n.jpg" class="img-responsive" alt="">
-        <figcaption>Adidas Part I</figcaption>
-      </figure>
+      <a href="/curtain#img-1">
+        <figure>
+          <img src="https://igcdn-photos-h-a.akamaihd.net/hphotos-ak-xfp1/t51.2885-15/11117029_1401450123506967_2131412174_n.jpg" class="img-responsive" alt="">
+          <figcaption>Adidas Part I</figcaption>
+        </figure>
+      </a>
     </div>
   </div>
   <div class="row">
     <div class="col-md-10 col-md-offset-1 grid--item">
-      <figure>
-        <img src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xap1/t51.2885-15/11049321_439601382864083_940391779_n.jpg" class="img-responsive" alt="">
-        <figcaption>Adidas Part II</figcaption>
-      </figure>
+      <a href="/curtain#img-2">
+        <figure>
+          <img src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xap1/t51.2885-15/11049321_439601382864083_940391779_n.jpg" class="img-responsive" alt="">
+          <figcaption>Adidas Part II</figcaption>
+        </figure>
+      </a>
     </div>
   </div>
   <div class="row">
     <div class="col-md-10 col-md-offset-1 grid--item">
-      <figure>
-        <img src="https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xfp1/t51.2885-15/11137903_1428919347405020_1064450290_n.jpg" class="img-responsive" alt="">
-        <figcaption>Adidas Part III</figcaption>
-      </figure>
+      <a href="/curtain#img-3">
+        <figure>
+          <img src="https://igcdn-photos-e-a.akamaihd.net/hphotos-ak-xfp1/t51.2885-15/11137903_1428919347405020_1064450290_n.jpg" class="img-responsive" alt="">
+          <figcaption>Adidas Part III</figcaption>
+        </figure>
+      </a>
     </div>
   </div>
   <div class="row">
     <div class="col-md-10 col-md-offset-1 grid--item">
-      <figure>
-        <img src="https://igcdn-photos-f-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/11176039_1577157229208917_1091004081_n.jpg" class="img-responsive" alt="">
-        <figcaption>Adidas Part IV</figcaption>
-      </figure>
+      <a href="/curtain#img-4">
+        <figure>
+          <img src="https://igcdn-photos-f-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-15/11176039_1577157229208917_1091004081_n.jpg" class="img-responsive" alt="">
+          <figcaption>Adidas Part IV</figcaption>
+        </figure>
+      </a>
     </div>
   </div>
 </div>
