--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,7 +15,7 @@
       <script>try{Typekit.load();}catch(e){}</script>
     </head>
     <body class="<%= page_classes %> tk-proxima-nova">
-      <nav class="nav-fixed nav-fixed--left">  
+      <nav class="nav-fixed nav-fixed--left" data-top="position: fixed" data-top-bottom="position: absolute">  
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/about">About</a></li>
@@ -25,10 +25,10 @@
           <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
-      <nav class="nav-fixed nav-fixed--center">  
+      <nav class="nav-fixed nav-fixed--center" data-top="position: fixed" data-top-bottom="position: absolute">  
         <a href="/" class="brand"><img src="img/logo-dark.png" alt=""></a>
       </nav>
-      <nav class="nav-fixed nav-fixed--right">  
+      <nav class="nav-fixed nav-fixed--right" data-top="position: fixed" data-top-bottom="position: absolute">  
         <ul>
           <li>
             <a href="http://jordandenzel.tumblr.com/" target="__blank">
