--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,7 +15,7 @@
       <script>try{Typekit.load();}catch(e){}</script>
     </head>
     <body class="<%= page_classes %> tk-proxima-nova">
-      <nav class="nav-fixed nav-fixed--left" data-top="position: fixed" data-top-bottom="position: absolute">  
+      <nav class="nav-fixed nav-fixed--left" data-start="transform: translateY(0px)" data-600-start="transform: translateY(600px)">  
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/about">About</a></li>
@@ -25,48 +25,48 @@
           <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
-      <nav class="nav-fixed nav-fixed--center" data-top="position: fixed" data-top-bottom="position: absolute">  
+      <nav class="nav-fixed nav-fixed--center" data-start="transform: translateY(0px)" data-600-start="transform: translateY(600px)">  
         <a href="/" class="brand"><img src="img/logo-dark.png" alt=""></a>
       </nav>
-      <nav class="nav-fixed nav-fixed--right" data-top="position: fixed" data-top-bottom="position: absolute">  
+      <nav class="nav-fixed nav-fixed--right" data-start="transform: translateY(0px)" data-600-start="transform: translateY(600px)">  
         <ul>
           <li>
             <a href="http://jordandenzel.tumblr.com/" target="__blank">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle-thin fa-stack-2x"></i>
-                <i class="fa fa-tumblr fa-stack-1x"></i>
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
           <li>
             <a href="https://instagram.com/Jordan_Denzel/" target="__blank">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle-thin fa-stack-2x"></i>
-                <i class="fa fa-instagram fa-stack-1x"></i>
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
           <li>
             <a href="https://www.youtube.com/channel/UCoKSpLg0rQ0OS0jBRHXYAtw" target="__blank">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle-thin fa-stack-2x"></i>
-                <i class="fa fa-youtube fa-stack-1x"></i>
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
           <li>
             <a href="https://twitter.com/jordan_denzel" target="__blank">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle-thin fa-stack-2x"></i>
-                <i class="fa fa-twitter fa-stack-1x"></i>
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
           <li>
             <a href="#" target="__blank">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle-thin fa-stack-2x"></i>
-                <i class="fa fa-facebook fa-stack-1x"></i>
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
