--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,5 +1,5 @@
-<section class="bg-hero" data-bottom-top="background-position: 50% 10%" data-top-bottom="background-position: 50% 75%">
-  <div class="row">
+<section class="bg-hero--full-height" data-bottom-top="background-position: 50% 10%" data-top-bottom="background-position: 50% 75%">
+  <div class="">
     <div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-xs-8 col-xs-offset-2 text-center vertical-center">
       <p class="text-uppercase">Jordan Denzel is a London based fashion stylist, blogger and influencer. Having graduated studying Fashion &amp; Retail in London, his career begun style assisting for clients such as Rita Ora and Labrinth.</p>
       <p class="text-uppercase">Since building a love &amp; passion and reputation being a blogger and lifestyle culture, Jordan's career has seen growth from premium to luxury retail, public relations, marketing and social media platforms.</p>
@@ -8,7 +8,3 @@
     </div>
   </div>  
 </section>
-
-<div class="container marketing">
-  <%= partial "partials/instagram-grid" %>
-</div>
