--- a/source/css/all.scss
+++ b/source/css/all.scss
@@ -39,7 +39,11 @@
 @import "states/index";
 
 body {
-  padding-bottom: 100px;
+  padding-bottom: 20px;
+}
+
+body.about {
+  padding-bottom: 0px;
 }
 
 .bg-hero {
@@ -48,6 +52,11 @@ body {
   background-size: cover;
   background-attachment: fixed;
   @include box-shadow(rgba(0,0,0,.2) 0 0 60px 10px inset);
+}
+
+.bg-hero--full-height {
+  @extend .bg-hero;
+  height: 100vh;
 }
 
 .index .bg-hero {
@@ -64,48 +73,6 @@ body {
 
 .grid--item {
   padding: 3px;
-}
-
-.nav-fixed {
-  position: absolute;
-  top: 100px;
-  text-align: center;
-  text-transform: uppercase;
-  z-index: $zIndex-front;
-
-  li {
-    padding: 10px;
-  }
-
-  a {
-    color: $black;
-
-    &:hover {
-      color: $white;
-    }
-  }
-}
-
-.nav-fixed--left {
-  left: 50px;
-
-  li {
-    padding: 15px;
-  }
-}
-
-.nav-fixed--center {
-  top: 25px;
-  margin-left: 50vw;
-  @include transform(translateX(-50%));
-}
-
-.nav-fixed--right {
-  right: 50px;
-
-  a:hover {
-    color: palette(grey);
-  }
 }
 
 .vertical-center {
