made curtain full width

--- a/source/css/all.scss
+++ b/source/css/all.scss
@@ -82,7 +82,7 @@ body.about {
 
 .portfolio .grid--item,
 .life-n-style .grid--item, {
-  padding-bottom: 20px;
+  padding-bottom: 0;
 
   img {
     width: 100%;
