--- a/source/css/modules/_curtain.scss
+++ b/source/css/modules/_curtain.scss
@@ -10,7 +10,7 @@ body.curtain {
   position: relative;
   padding: 3em 5% 0;
   background-repeat: no-repeat;
-  background-size: 50%;
+  background-size: cover;
   background-position: center center;
 }
 .curtain-block {
