--- a/source/css/layout/_index.scss
+++ b/source/css/layout/_index.scss
@@ -7,3 +7,8 @@
 // Panel
 // ==========================================================================
 @import 'panel';
+
+// ==========================================================================
+// General layout
+// ==========================================================================
+@import 'general';
