--- a/source/css/modules/_index.scss
+++ b/source/css/modules/_index.scss
@@ -17,3 +17,8 @@
 // Content Curtain
 // ==========================================================================
 @import 'curtain';
+
+// ==========================================================================
+// Hero Image
+// ==========================================================================
+@import 'hero';
