increased grid padding and added max width to insta

--- a/source/css/all.scss
+++ b/source/css/all.scss
@@ -41,10 +41,11 @@
 .marketing {
   padding-top: 20px;
   padding-bottom: 20px;
+  max-width: 950px;
 }
 
 .grid--item {
-  padding: 3px;
+  padding: 20px;
 }
 
 .portfolio .grid--item,
