--- a/source/press.html.erb
+++ b/source/press.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mobile-padding">
     <div class="row">
       <div class="col-md-12">
         <img src="img/press-grid.png" class="img-responsive" alt="">
