--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mobile-padding">
   <div class="row">
     <div class="col-md-6 col-md-offset-3 col-sm-4 col-sm-offset-4">
       <form class="text-center vertical-center">
