--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mobile-padding">
   <div class="row">
     <div class="col-md-10 col-md-offset-1 grid--item" style="margin-top:200px;">
       <a href="/curtain#img-1">
